--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,12 @@
 .App {
-  text-align: center;
+	display: grid;
+	grid-template-rows: max(auto, 100px) auto max(auto, 40px);
+	width: 100%;
+	max-width: 100%;
+	max-height: max-content;
+	height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-item--active{
+	background-size:100% 3px!important;
 }
