--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
 	display: grid;
-	grid-template-rows: max(auto, 100px) auto max(auto, 40px);
-	width: 100%;
+	grid-template-rows: minmax(min-content, max-content) auto minmax(min-content, max-content);
+	width: 100vw;
 	max-width: 100%;
 	max-height: max-content;
 	height: 100vh;
