--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,13 @@
 	grid-template-rows: minmax(min-content, max-content) auto minmax(min-content, max-content);
 	width: 100vw;
 	max-width: 100%;
-	max-height: max-content;
 	height: 100vh;
+	max-height: max-content;
 }
 
+.App > *:not([class$='footer']):not([class$='header']) {
+	max-width: 100%;
+}
 .nav-item--active{
 	background-size:100% 3px!important;
 }
