--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+	font-family: 'Montserrat', 'Gudea', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+	'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue';
 	display: grid;
 	grid-template-rows: minmax(min-content, max-content) auto minmax(min-content, max-content);
 	width: 100vw;
